--- a/IDSIA_Biomedical_Texts.html
+++ b/IDSIA_Biomedical_Texts.html
@@ -177,20 +177,41 @@
                 overflow-wrap: break-word; /* Allow text to wrap within the box */
                 word-break: break-word; /* Ensure long words break */
             }
+
+            /* Back Button Styles */
+            .back-button {
+                position: absolute;
+                top: 20px;
+                left: 30px;
+                font-size: 30px;
+                color: #f56a6a;
+                text-decoration: none;
+                z-index: 10;
+                transition: color 0.3s ease;
+            }
+            .back-button:hover {
+                color: #d45252;
+            }
+            header {
+                position: relative;
+                padding-top: 5px; /* Space for the back button */
+            }
         </style>
     </head>
 
 	<body class="is-preload">
-        <div class="container">
+
 		<!-- Header Section -->
         <header>
+            <a href="index.html#all-projects" class="back-button"><i class="fas fa-arrow-left"></i></a>
+        </header>
+        <div class="container">
             <h1 style="text-align: center;">Evaluating Psychometric Features and Contextual Embeddings for Mental Disorder Classification</h1>
-            <p style="text-align: center;" class="project-description">This study assesses the potential of psychometric features and contextual embeddings to classify mental disorders (anxiety, panic, depression) in short biomedical texts from social media, using machine learning and deep learning models.</p>
+            <p style="text-align: center; font-weight: 150; text-transform: uppercase;" class="project-description">This study assesses the potential of psychometric features and contextual embeddings to classify mental disorders (anxiety, panic, depression) in short biomedical texts from social media, using machine learning and deep learning models.</p>
             <div class="button-container">
                 <a href="https://github.com/suryam1504/Masters-Thesis-Evaluating-Psychometric-Features-and-Contextual-Embeddings-in-Biomedical-Texts" target="_blank" class="button">GitHub</a>
                 <a href="IDSIA_Bio_Texts_Thesis_report.html" target="_blank" class="button">Detailed Report</a>
-            </div>
-        </header>
+        </div>
 
         <!-- Background Section -->
         <section id="background">
