--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 											Learning</font></strong> and <strong><font color="#f56a6a">Natural Language Processing (NLP)</font></strong> projects, and I continue to explore and learn various tools and skills.<br><br>
 											I am currently integrating <strong><font color="#f56a6a">LangChain</font></strong> to develop <strong><font color="#f56a6a">LLM-based applications</font></strong>, including conversational agents, <strong><font color="#f56a6a">retrieval-augmented 
 											generation (RAG)</font></strong> pipelines, and automated reasoning systems.<br><br>
-										Other things I enjoy: Watching movies and TV shows, traveling, playing chess, reading (fictional) books, and playing guitar
+										Other things I enjoy: Watching movies and TV shows, traveling, playing chess, reading books, and playing guitar
 										<br></p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
@@ -182,6 +182,16 @@
 									</div>
 								</section>
 
+								<section id="publications">
+									<h2>Published Works</h2>
+									<ul class="pub-list">
+										<li><strong>Mitrović, S., Frisone, F., Gupta, S., Lucifora, C., Čarapić, D., Schillaci, C., ... & Singh, A.</strong> (2023, December). 
+											<em>Annotating Panic in Social Media using Active Learning, Transformers and Domain Knowledge</em>. In <em>2023 IEEE International 
+												Conference on Data Mining Workshops (ICDMW)</em> (pp. 1269-1278). IEEE. <br>
+												<a href="https://ieeexplore.ieee.org/abstract/document/10411628" target="_blank">Link to Publication <i class="fas fa-external-link-alt"></i></a></li>
+									</ul>
+								</section>
+
 						</div>
 					</div>
 
@@ -206,7 +216,7 @@
 										<li><a href="resume.html">Resume</a></li>
 										<li><a href="#skills-tools">Skills and Tools</a></li>
 										<li><a href="#all-projects">Projects</a></li>
-										<li><a href="Research_Publications.html">Research Publications</a></li>
+										<li><a href="#publications">Research Publications</a></li>
 										<li><a href="Education.html">Education</a></li>
 										<!--<li><a href="elements.html">Elements</a></li>-->
 
